# File-based-CMS

./: .pylintrc  app.py  pyproject.toml
cms/: users.yml
cms/data/: changes.txt
templates/: edit.html  index.html  layout.html  markdown.html
tests/: test_app.py  users.yml
