[tool.poetry]
name = "cms_final"
version = "0.1.0"
description = ""
authors = ["Launch School <staff@launchschool.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
markdown = "^3.6"
flask = "^3.0.3"
bcrypt = "^4.1.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
